--- a/packages/create-sitecore-jss/src/templates/angular/package.json
+++ b/packages/create-sitecore-jss/src/templates/angular/package.json
@@ -51,20 +51,20 @@
   "homepage": "https://jss.sitecore.com",
   "license": "Apache-2.0",
   "dependencies": {
-    "@angular/animations": "~11.2.6",
-    "@angular/common": "~11.2.6",
-    "@angular/compiler": "~11.2.6",
-    "@angular/core": "~11.2.6",
-    "@angular/forms": "~11.2.6",
-    "@angular/platform-browser": "~11.2.6",
-    "@angular/platform-browser-dynamic": "~11.2.6",
-    "@angular/platform-server": "~11.2.6",
-    "@angular/router": "~11.2.6",
+    "@angular/animations": "~12.2.17",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/platform-server": "~12.2.17",
+    "@angular/router": "~12.2.17",
     "@apollo/client": "^3.3.12",
     "@ngx-translate/core": "~13.0.0",
     "@ngx-translate/http-loader": "~6.0.0",
     "@sitecore-jss/sitecore-jss-angular": "^21.1.0-canary",
-    "apollo-angular": "~2.4.0",
+    "apollo-angular": "~3.0.1",
     "bootstrap": "^4.3.1",
     "core-js": "~3.9.1",
     "graphql": "15.5.0",
@@ -76,16 +76,16 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^11.1.1",
-    "@angular-devkit/build-angular": "0.1102.18",
-    "@angular-eslint/builder": "2.0.2",
-    "@angular-eslint/eslint-plugin": "2.0.2",
-    "@angular-eslint/eslint-plugin-template": "2.0.2",
-    "@angular-eslint/schematics": "2.0.2",
-    "@angular-eslint/template-parser": "2.0.2",
-    "@angular/cli": "~11.2.5",
-    "@angular/compiler-cli": "~11.2.6",
-    "@angular/language-service": "~11.2.6",
+    "@angular-builders/custom-webpack": "^12.1.3",
+    "@angular-devkit/build-angular": "^12.2.18",
+    "@angular-eslint/builder": "^12.7.0",
+    "@angular-eslint/eslint-plugin": "^12.7.0",
+    "@angular-eslint/eslint-plugin-template": "^12.7.0",
+    "@angular-eslint/schematics": "^12.7.0",
+    "@angular-eslint/template-parser": "^12.7.0",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
     "@sitecore-jss/sitecore-jss-angular-schematics": "^21.1.0-canary",
     "@sitecore-jss/sitecore-jss-cli": "^21.1.0-canary",
     "@sitecore-jss/sitecore-jss-dev-tools": "^21.1.0-canary",
@@ -125,7 +125,7 @@
     "npm-run-all": "~4.1.5",
     "protractor": "^7.0.0",
     "ts-node": "~9.1.1",
-    "typescript": "~4.1.5",
+    "typescript": "~4.3.5",
     "yaml-lint": "^1.2.4"
   }
 }
